# fastapi_test_project

./: .gitignore  README.md  crud.py  items_views.py  main.py  pyproject.toml
alembic/versions/: 2025_12_08_2034-bba07153a8e2_create_products_table.py  2025_12_08_2044-d07ae2d97d11_create_users_table.py  2025_12_08_2053-c3bcb2b9a1cf_create_posts_table.py  2025_12_09_2126-e3c72e69e8e8_create_profile_table.py
api_v1/products/: crud.py  dependencies.py  shemas.py  views.py
core/: config.py
core/models/: db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
users/: schemas.py  views.py
